fixed bug to make input form look better on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,8 +44,13 @@ font-weight: bolder;}
     width: fit-content;
     font-size: 18px;
     text-align: center;
-    padding-left: 22%;
+    
 }
+
+#fName{
+    width: fit-content;
+}
+
 #name-group{
     width: fit-content;
     margin: 0 auto;
@@ -53,7 +58,7 @@ font-weight: bolder;}
 
 h3 {
     margin: 0 auto;
-    
+    text-align: justify;
     font: large;
 
 }
